add swagger for GET events
