# swagger/responses.yml
@@ -74,3 +74,11 @@ components:
             type: array
             items:
               $ref: '#/components/schemas/IOrganisationResponse'
+    ListOfEvents:
+      description: Events
+      content:
+        application/json:
+          schema:
+            type: array
+            items:
+              $ref: '#/components/schemas/IEventResponse'
